--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:theme="@style/TextColorTheme"
-                android:orientation="vertical">
-
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:theme="@style/TextColorTheme"
+        android:orientation="vertical"
+        android:tag="skin:item_bg_color:background"
+        android:background="@color/item_bg_color"
+    >
     <ImageView
         android:id="@+id/id_iv_icon"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_centerVertical="true"
         android:layout_marginRight="8dp"
-        android:tag="skin:left_menu_icon:src"
-        android:src="@drawable/left_menu_icon"/>
+        android:tag="skin:icon:src"
+        android:src="@drawable/icon"/>
 
     <TextView android:id="@+id/id_tv_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="玩Android"
+              android:text="Android"
               android:tag="skin:item_text_color:textColor"
               android:textColor="@color/item_text_color"
               android:layout_toRightOf="@id/id_iv_icon"
@@ -26,12 +28,11 @@
 
     <TextView android:id="@+id/id_tv_tip"
               android:layout_width="wrap_content"
-              android:tag="skin:item_text_color:textColor"
               android:layout_height="wrap_content"
+              android:text="simon"
               android:textColor="@color/item_text_color"
-              android:text="鸿洋"
+              android:tag="skin:item_text_color:textColor"
               android:layout_toRightOf="@id/id_iv_icon"
               android:layout_alignBottom="@id/id_iv_icon"
-             />
-
+     />
 </RelativeLayout>
