--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,12 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="menu_item_text_color">#ffffffff</color>
-    <color name="item_text_color">#ff000000</color>
+    <color name="item_bg_color">#FF4081</color>
+    <color name="item_bg_color_day">#ffffffff</color>
+    <color name="item_bg_color_night">#ff000000</color>
+
+    <color name="item_text_color">#303F9F</color>
+    <color name="item_text_color_night">#ffffffff</color>
+    <color name="item_text_color_day">#ff000000</color>
 
 </resources>
